Just noticed my button was not centered. I fixed that.

--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ button {
   font-weight: 800;
   font-size: 15px;
   color: #fff;
-  margin: 30px 24px;
+  display: block;
+  margin: 30px auto;
   box-shadow: 0px 20px 20px rgba(103, 189, 153, 0.2);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: 0.3s ease all;
